add configure path shortcut

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,11 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@core/*": ["src/app/@core/*"],
+      "@stye/*": ["src/assets/@stye/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
