--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noPropertyAccessFromIndexSignature": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
@@ -15,6 +15,7 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "strictPropertyInitialization": false,
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
@@ -23,6 +24,7 @@
       "ES2022",
       "dom"
     ],
+    "resolveJsonModule": true,
     "paths": {
       "@core/*": ["src/app/@core/*"],
       "@stye/*": ["src/assets/@stye/*"],
@@ -36,3 +38,5 @@
     "strictTemplates": true
   }
 }
+
+//
